Fix package bin path

--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "Use a single of truth for your Zod schemas and Prisma models",
   "packageManager": "pnpm@9.14.2",
   "license": "MIT",
-  "keywords": ["zod", "prisma", "single-source-of-truth", "source-of-truth"],
+  "keywords": [
+    "zod",
+    "prisma",
+    "single-source-of-truth",
+    "source-of-truth"
+  ],
   "homepage": "https://github.com/apteryxxyz/single-source-of-truth",
   "repository": {
     "type": "git",
@@ -14,7 +19,9 @@
   "bugs": {
     "url": "https://github.com/apteryxxyz/single-source-of-truth/issues"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -22,7 +29,7 @@
     }
   },
   "bin": {
-    "sot": "./dist/program.js"
+    "sot": "./dist/command.js"
   },
   "scripts": {
     "lint": "biome lint . --write",
