--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "single-source-of-truth",
+  "version": "0.4.0",
+  "packageManager": "pnpm@10.8.1",
   "type": "module",
-  "version": "0.3.3",
-  "description": "Use a single of truth for your Zod schemas and Prisma models",
-  "packageManager": "pnpm@9.14.2",
+  "description": "Use Zod schemas to your generate Prisma schema",
   "license": "MIT",
-  "keywords": ["zod", "prisma", "single-source-of-truth", "source-of-truth"],
-  "homepage": "https://github.com/apteryxxyz/single-source-of-truth",
+  "keywords": ["truth", "zod", "prisma", "schema", "generator"],
+  "homepage": "https://github.com/apteryxxyz/single-source-of-truth#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/apteryxxyz/single-source-of-truth.git"
@@ -14,38 +14,49 @@
   "bugs": {
     "url": "https://github.com/apteryxxyz/single-source-of-truth/issues"
   },
-  "files": ["dist"],
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "bin": {
-    "sot": "dist/command.js"
+    "truth": "./dist/command.js"
+  },
+  "files": ["src", "dist"],
+  "exports": {
+    "./config": {
+      "types": "./dist/config.d.ts",
+      "import": "./dist/config.js"
+    },
+    "./zod": {
+      "types": "./dist/zod/external.d.ts",
+      "import": "./dist/zod/external.js"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
-    "lint": "biome lint . --write",
-    "format": "biome format . --write",
+    "lint": "biome ci .",
+    "format": "biome check . --write",
     "check": "tsc --noEmit",
-    "build": "tsup",
-    "dev": "pnpm build --watch"
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "prepare": "husky & ts-patch install -s",
+    "postinstall": "biome format package.json --write",
+    "prepack": "pinst --disable && biome format package.json --write",
+    "postpack": "pinst --enable && biome format package.json --write"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
-    "commander": "^12.1.0",
-    "lodash": "^4.17.21",
-    "tsx": "^4.19.1"
+    "chalk": "^5.4.1",
+    "code-block-writer": "^13.0.3",
+    "commander": "^13.1.0"
   },
-  "peerDependencies": {
-    "zod": "^3.23.8"
+  "optionalDependencies": {
+    "zod": "4.0.0-beta.20250414T061543"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@types/lodash": "^4.17.12",
-    "@types/node": "^20.14.10",
-    "tsup": "^8.1.0",
-    "typescript": "^5.5.3",
-    "zod": "^3.23.8"
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.14.1",
+    "@zod/core": "^0.5.0",
+    "husky": "^9.1.7",
+    "pinst": "^3.0.0",
+    "ts-patch": "^3.3.0",
+    "typescript": "^5.8.3",
+    "typescript-transform-paths": "^3.5.5",
+    "zod": "4.0.0-beta.20250414T061543"
   }
 }
