--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,1 @@
-{
-  "extends": "./tsconfig.base.json",
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "dist",
-    "paths": { "~/*": ["src/*"] },
-    "skipLibCheck": true,
-    "noEmit": true,
-    "lib": ["DOM", "ESNext"],
-    "strictNullChecks": true
-  }
-}
+{ "extends": "./tsconfig.base.json" }
