--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,35 @@
 {
-  "cSpell.language": "en-AU",
   "explorer.compactFolders": true,
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
-    ".env": "*.env, .env.*",
     "package.json": "pnpm-lock.yaml, pnpm-workspace.yaml",
-    "*.js": "$(capture).js.map, $(capture).d.ts",
-    "*.jsx": "$(capture).jsx.map, $(capture).d.ts",
-    "*.d.ts": "$(capture).d.ts.map"
+    "*.ts": "$(capture).test.ts",
+    "*.js": "$(capture).js.map, $(capture).d.ts, $(capture).d.ts.map, $(capture).cjs",
+    "*.cjs": "$(capture).cjs.map, $(capture).d.cts, $(capture).d.cts.map"
   },
-  "editor.formatOnSave": true,
+
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
-  "editor.codeActionsOnSave": {
-    "source.organizeImports.biome": "explicit"
+
+  "[typescript]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "biomejs.biome",
+    "editor.codeActionsOnSave": {
+      "source.organizeImports.biome": "explicit"
+    }
   },
+
+  // TypeScript
   "typescript.preferences.importModuleSpecifierEnding": "js",
-  "todo-tree.general.tags": ["=====", "NOTE", "IDEA", "TODO", "FIX", "HACK"],
+  "typescript.inlayHints.parameterNames.enabled": "all",
+  "typescript.inlayHints.variableTypes.suppressWhenTypeMatchesName": true,
+
+  // Code Spell Checker
+  "cSpell.language": "en-AU",
+  "cSpell.words": [],
+
+  // Todo Tree
+  "todo-tree.general.tags": ["=====", "TODO"],
   "todo-tree.highlights.customHighlight": {
     "=====": {
       "type": "whole-line",
@@ -25,35 +38,10 @@
       "gutterIcon": true,
       "hideFromTree": true
     },
-    "NOTE": {
-      "type": "whole-line",
-      "icon": "note",
-      "foreground": "#8df7ff",
-      "gutterIcon": true,
-      "hideFromTree": true
-    },
-    "IDEA": {
-      "type": "whole-line",
-      "icon": "light-bulb",
-      "foreground": "#458efc",
-      "gutterIcon": true
-    },
     "TODO": {
       "type": "whole-line",
       "icon": "check",
       "foreground": "#ff9900",
-      "gutterIcon": true
-    },
-    "FIX": {
-      "type": "whole-line",
-      "icon": "bug",
-      "foreground": "#e63d00",
-      "gutterIcon": true
-    },
-    "HACK": {
-      "type": "whole-line",
-      "icon": "tools",
-      "foreground": "#45da20",
       "gutterIcon": true
     }
   }
