--- a/package.json
+++ b/package.json
@@ -1,58 +1,48 @@
 {
   "name": "single-source-of-truth",
-  "version": "0.5.2",
-  "packageManager": "pnpm@10.8.1",
+  "version": "0.6.0",
+  "packageManager": "pnpm@10.20.0",
   "type": "module",
-  "description": "Use Zod schemas to your generate Prisma schema",
-  "license": "MIT",
-  "keywords": ["truth", "zod", "prisma", "schema", "generator"],
-  "homepage": "https://github.com/apteryxxyz/single-source-of-truth#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/apteryxxyz/single-source-of-truth.git"
-  },
-  "bugs": {
-    "url": "https://github.com/apteryxxyz/single-source-of-truth/issues"
-  },
+  "files": ["dist/**/*.{js,d.ts}"],
   "bin": {
     "truth": "./dist/command.js"
   },
-  "files": ["src", "dist"],
   "exports": {
     "./config": {
       "types": "./dist/config.d.ts",
-      "import": "./dist/config.js"
+      "default": "./dist/config.js"
     },
-    "./zod/v4": {
-      "types": "./dist/zod/v4/external.d.ts",
-      "import": "./dist/zod/v4/external.js"
-    },
-    "./package.json": "./package.json"
+    "./*": {
+      "types": "./dist/*/index.d.ts",
+      "default": "./dist/*/index.js"
+    }
   },
   "scripts": {
     "lint": "biome ci .",
     "format": "biome check . --write",
     "check": "tsc --noEmit",
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "prepare": "husky & ts-patch install -s",
-    "postinstall": "biome format package.json --write",
-    "prepack": "pinst --disable && biome format package.json --write",
-    "postpack": "pinst --enable && biome format package.json --write"
+    "build": "tsdown"
   },
   "dependencies": {
     "chalk": "^5.4.1",
     "code-block-writer": "^13.0.3",
     "commander": "^13.1.0"
   },
+  "peerDependencies": {
+    "arktype": "^2.1.25",
+    "tsx": "^4.20.6"
+  },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/node": "^24.0.1",
-    "husky": "^9.1.7",
-    "pinst": "^3.0.0",
-    "ts-patch": "^3.3.0",
-    "typescript": "^5.8.3",
-    "typescript-transform-paths": "^3.5.5",
-    "zod": "3.25.62"
+    "@biomejs/biome": "^2.3.3",
+    "@types/node": "^24.10.0",
+    "arktype": "^2.1.25",
+    "tsdown": "^0.15.7",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  },
+  "peerDependenciesMeta": {
+    "arktype": {
+      "optional": true
+    }
   }
 }
