--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,52 @@
-{ "extends": "./tsconfig.base.json" }
+{
+  "$schema": "https://json.schemastore.org/tsconfig.json",
+
+  "include": ["./src"],
+  "exclude": ["node_modules", "dist"],
+
+  "compileOnSave": true,
+  "compilerOptions": {
+    "strict": true,
+
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": false,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+
+    "allowArbitraryExtensions": false,
+    "allowImportingTsExtensions": false,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "resolveJsonModule": true,
+
+    "declaration": true,
+    "declarationMap": true,
+    "importHelpers": false,
+    "newLine": "lf",
+    "removeComments": false,
+    "sourceMap": true,
+    "inlineSourceMap": false,
+
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+
+    "experimentalDecorators": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "target": "ES2022",
+    "useDefineForClassFields": true,
+    "skipLibCheck": true,
+
+    "baseUrl": ".",
+    "outDir": "./dist",
+    "tsBuildInfoFile": "./dist/.tsbuildinfo",
+    "paths": { "~/*": ["./src/*"] }
+  }
+}
