--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,7 @@
 
   // Code Spell Checker
   "cSpell.language": "en-AU",
-  "cSpell.words": [],
+  "cSpell.words": ["arktype"],
 
   // Todo Tree
   "todo-tree.general.tags": ["=====", "TODO"],
